Add Default Metrics to metrics.yml

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,3 +29,9 @@ jobs:
           plugin_activity_limit: 5
           plugin_activity_days: 0
           plugin_activity_filter: issue, pr, release, fork, review, ref/create
+      - name: Default metrics
+        uses: lowlighter/metrics@latest
+        with:
+          filename: resources/default_metrics.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: header, activity, community, repositories, metadata
