--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -47,5 +47,6 @@ jobs:
             gnuplot
           plugin_languages_indepth: yes
           plugin_languages_details: lines, bytes-size
-          plugin_languages_limit: 4
+          plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 15
+          plugin_languages_recent_days: 30
