--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,7 +46,8 @@ jobs:
             html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
             gnuplot
           plugin_languages_indepth: yes
-          plugin_languages_details: lines, bytes-size
+          plugin_languages_details: percentage, lines
           plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 15
           plugin_languages_recent_days: 30
+          
