--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -4,6 +4,8 @@ name: Metrics
 
 # Controls when the workflow will run
 on:
+  schedule:
+  - cron: 0 0 * * 0
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
