--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -5,7 +5,7 @@ name: Metrics
 # Controls when the workflow will run
 on:
   schedule:
-  - cron: 0 0 * * 0
+  - cron: 0 0 * * *
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
