--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -63,4 +63,13 @@ jobs:
           plugin_code_load: 400
           plugin_code_lines: 20
           plugin_code_visibility: public
-          
+      - name: Recent activity charts
+        uses: lowlighter/metrics@latest
+        with:
+          filename: resources/habits_chart.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_habits: yes
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
+          config_timezone: America/New_York
