--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -69,7 +69,10 @@ jobs:
           filename: resources/habits_chart.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
+          plugin_habits_from: 500
+          plugin_habits_days: 32
+          plugin_habits_trim: yes
           plugin_habits: yes
-          plugin_habits_facts: no
+          plugin_habits_facts: yes
           plugin_habits_charts: yes
           config_timezone: America/New_York
