--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -49,9 +49,11 @@ jobs:
             gnuplot
           plugin_languages_indepth: yes
           plugin_languages_details: percentage, lines
+          plugin_languages_sections: recently-used
           plugin_languages_limit: 8
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_recent_days: 30
+          plugin_languages_analysis_timeout: 30
+          plugin_languages_recent_days: 32
+          plugin_languages_recent_load: 500
       - name: Java or Python Snippet of the Day
         uses: lowlighter/metrics@latest
         with:
