--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -20,4 +20,4 @@ jobs:
           plugin_activity: yes
           plugin_activity_limit: 5
           plugin_activity_days: 0
-          plugin_activity_filter: issue, pr, release, fork, review, ref/create
+          plugin_activity_filter: issue, pr, release, fork, review, push, commit
