--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -21,3 +21,4 @@ jobs:
           plugin_activity_limit: 5
           plugin_activity_days: 0
           plugin_activity_filter: issue, pr, release, fork, review, push, commit
+          plugin_activity_visibility: public
