--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -16,13 +16,14 @@ jobs:
           filename: resources/language_analysis.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          plugin_languages: yes
+          plugin_languages: true
           plugin_languages_ignored: >-
             html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
             gnuplot
-          plugin_languages_indepth: yes
+          plugin_languages_indepth: true
           plugin_languages_details: percentage, lines
-          plugin_languages_sections: recently-used
+          plugin_languages_sections: most-used
+          plugin_language_cateogires: programming, markup
           plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 30
           plugin_languages_recent_days: 32
