--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -2,8 +2,8 @@ name: Update Metrics
 
 
 on:
-  # schedule:
-  # - cron: 0 0 * * *
+  schedule:
+  - cron: 0 */8 * * *
   workflow_dispatch:
 
 jobs:
