--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -21,7 +21,7 @@ jobs:
         config_display: large
         config_padding: 0, 3%
         plugin_languages: yes
-        plugin_languages_categories: markup, programming
+        plugin_languages_categories: programming
         plugin_languages_colors: github
         plugin_languages_limit: 8
         plugin_languages_recent_categories: markup, programming
