--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -46,4 +46,11 @@ jobs:
         plugin_code_load: 500
         plugin_code_lines: 20
         plugin_code_visibility: public
+        plugin_isocalendar: yes
+        plugin_isocalendar_duration: full-year
+        plugin_people: yes
+        plugin_people_types: followers
+        plugin_lines: yes
+        plugin_traffic: yes
+        plugin_gists: yes
         config_timezone: America/New_York
