--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -48,8 +48,8 @@ jobs:
         plugin_code_load: 500
         plugin_code_lines: 20
         plugin_code_visibility: public
-        plugin_isocalendar: yes
-        plugin_isocalendar_duration: half-year
+#         plugin_isocalendar: yes
+#         plugin_isocalendar_duration: half-year
         plugin_people: yes
         plugin_people_types: followers
         plugin_lines: yes
