--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -25,9 +25,11 @@ jobs:
         plugin_languages: yes
         plugin_languages_categories: programming
         plugin_languages_colors: github
-        plugin_languages_limit: 8
+        plugin_languages_limit: 16
         plugin_languages_recent_categories: markup, programming
-        plugin_languages_sections: most-used
+        plugin_languages_recent_load: 500
+        plugin_languages_recent_days: 32
+        plugin_languages_sections: most-used, recently-used
         plugin_languages_threshold: 0%
         plugin_languages_indepth: true
         plugin_languages_ignored: >-
