--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -23,15 +23,13 @@ jobs:
         config_display: large
         config_padding: 0, 3%
         plugin_languages: yes
-        plugin_languages_categories: programming
+        plugin_languages_categories: markup, programming
         plugin_languages_colors: github
         plugin_languages_limit: 16
-        plugin_languages_recent_categories: programming
+        plugin_languages_recent_categories: markup, programming
         plugin_languages_sections: most-used, recently-used
         plugin_languages_threshold: 0%
         plugin_languages_indepth: true
-        plugin_languages_ignored: >-
-          html, tex
         plugin_habits: yes
         plugin_habits_facts: no
         plugin_habits_charts: yes
