--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -27,9 +27,13 @@ jobs:
         plugin_languages_colors: github
         plugin_languages_limit: 16
         plugin_languages_recent_categories: markup, programming
+        plugin_languages_recent_days: 30
+        plugin_languages_recent_load: 500
         plugin_languages_sections: most-used, recently-used
         plugin_languages_threshold: 0%
         plugin_languages_indepth: true
+        plugin_languages_ignored: >-
+          html, css, tex
         plugin_habits: yes
         plugin_habits_facts: no
         plugin_habits_charts: yes
@@ -42,7 +46,7 @@ jobs:
         plugin_activity_filter: issue, pr, release, fork, review, push, commit
         plugin_activity_visibility: public
         plugin_code: yes
-        plugin_code_languages: java, javascript, python, tex, js, py
+        plugin_code_languages: java, javascript, python, tex, js, py, sh, bash, shell
         plugin_code_load: 500
         plugin_code_lines: 20
         plugin_code_visibility: public
