--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -26,7 +26,7 @@ jobs:
         plugin_languages_categories: markup, programming
         plugin_languages_colors: github
         plugin_languages_limit: 16
-        plugin_languages_recent_categories: markup, programming
+        plugin_languages_recent_categories: markup, programming, data, prose
         plugin_languages_recent_days: 30
         plugin_languages_recent_load: 500
         plugin_languages_sections: most-used, recently-used
