--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -46,7 +46,7 @@ jobs:
         plugin_activity_filter: issue, pr, release, fork, review, push, commit
         plugin_activity_visibility: public
         plugin_code: yes
-        plugin_code_languages: java, javascript, python, tex, js, py, sh, bash, shell
+        plugin_code_languages: java, javascript, python, tex, js, py, sh, bash, shell, xml
         plugin_code_load: 500
         plugin_code_lines: 20
         plugin_code_visibility: public
