--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -23,7 +23,7 @@ jobs:
         config_display: large
         config_padding: 0, 3%
         plugin_languages: yes
-        plugin_languages_categories: markup, programming, data
+        plugin_languages_categories: programming, data, markup
         plugin_languages_colors: github
         plugin_languages_limit: 16
         plugin_languages_recent_categories: markup, programming, data, prose
