--- a/.github/workflows/update_metrics.yml
+++ b/.github/workflows/update_metrics.yml
@@ -32,6 +32,7 @@ jobs:
         plugin_languages_sections: most-used, recently-used
         plugin_languages_threshold: 0%
         plugin_languages_indepth: true
+        plugin_languages_details: percentage, lines, bytes-size
         plugin_languages_ignored: >-
           html, css, tex
         plugin_habits: yes
