--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -26,6 +26,11 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run Script
       run: python script.py
+    - name: Commit files
+      run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -m "Add changes" -a
     - name: Push Changes
       uses: ad-m/github-push-action@master
       with:
