--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -26,13 +26,7 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run Script
       run: python script.py
-    - name: Commit files
-      run: |
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git commit -m "Update README" -a
-    - name: Push Changes
-      uses: ad-m/github-push-action@master
+    - name: Commit and Push changes
+      uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        branch: ${{github.ref}}
+        commit_message: Update README
