--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -26,6 +26,8 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run Script
       run: python script.py
+      env:
+        API_TOKEN: ${{secrets.API_TOKEN}}
     - name: Commit and Push changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
