--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -21,7 +21,10 @@ jobs:
       uses: actions/cache@v3
       with:
         path: cache
-        key: ${{hashFiles('**/*.py')}}
+        key: ${{hashFiles('**/*.py')}}-${{github.run_id}}-${{github.run_attempt}}
+        restore-keys: |
+          ${{hashFiles('**/*.py')}}-${{github.run_id}}-
+          ${{hashFiles('**/*.py')}}-
     - name: Install Python Dependencies
       run: pip install -r requirements.txt
     - name: Run Script
