--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -35,3 +35,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Update README
+        commit_author: Author <actions@github.com>
