--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -31,6 +31,7 @@ jobs:
       run: python script.py
       env:
         API_TOKEN: ${{secrets.API_TOKEN}}
+        WAKA_TOKEN: ${{secrets.WAKA_TOKEN}}
     - name: Commit and Push changes
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
